follow up to r3818 removed uiConf sample ( lost all case size because of jquery parse of xml ) Should be re-added via API lookup.
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3819 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/DolStatistics/tests/DOLStatisticsPlayer.html
+++ b/modules/DolStatistics/tests/DOLStatisticsPlayer.html
@@ -31,148 +31,7 @@ var cto = {
 	<param name="movie" value="http://www.kaltura.co.cc/index.php/kwidget/cache_st/1323101371/wid/_1421/uiconf_id/1785641/entry_id/0_8adsa2hl" />
 </object>
 <!--  
-
- <hbox id="topLevel" width="100%" height="100%">
-    <vbox id="player" width="100%" height="100%" stylename="black">
-      <plugin id="kalturaMix" width="0%" height="0%" includeinlayout="false" loadingpolicy="onDemand"></plugin>
-      <plugin id="statistics" width="0%" height="0%" includeinlayout="false"></plugin>
-
-<plugin id="dolStatistics" path="/content/uiconf/disney/kdp_3.5.25/plugins/dolStatisticsPlugin.swf" width="0%" height="0%" includeinlayout="false" playheadfrequency="2" jsfunctionname="cto.trackVideo" protocol="http" host="example.com\" assetname="{mediaProxy.entry.id}|{playBtnControllerScreen.selected}|{mediaProxy.entry.name}" genurl="{configProxy.flashvars.referer}" gentitle="Kaltura Oleg Test" devid="1" usragnt="" assetid="" wigid="{configProxy.flashvars.uiconf}" listento="openFullScreen,mediaReady,percentReached,playerPaused,closeFullScreen,mediaLoadError,playerPlayEnd"></plugin> 
-
-
-
-      <canvas id="PlayerHolder" height="100%" width="100%" stylename="black">
-        <video id="video" width="100%" height="100%"></video>
-        <vbox id="offlineMessageHolder" verticalalign="middle" horizontalalign="center" includeinlayout="false" width="100%" height="100%">
-          <spacer height="100%"></spacer>
-          <spacer height="100%"></spacer>
-          <label id="offlineMessage" stylename="offlineMessage" text="{mediaProxy.entry.offlineMessage}" visible="{mediaProxy.isOffline}" width="100%" height="30"></label>
-          <spacer height="100%"></spacer>
-        </vbox>
-        <vbox id="generalPluginContainer" width="100%" height="100%">
-          <spacer id="contentPusher" height="100%"></spacer>
-        </vbox>
-        <screens id="screensLayer" width="100%" height="100%" mouseovertarget="{PlayerHolder}" stylename="clickThrough" startscreenid="startScreen" startscreenoverid="startScreen" pausescreenoverid="pauseScreen" pausescreenid="pauseScreen" playscreenoverid="playScreen" endscreenid="endScreen" endscreenoverid="endScreen"></screens>
-        <watermark id="watermark" width="100%" height="100%" watermarkpath="http://www.kaltura.com/content/uiconf/kaltura/kmc/appstudio/kdp3/exampleWatermark.png" watermarkclickpath="http://www.kaltura.com/" watermarkposition="bottomLeft" padding="5"></watermark>
-        <vbox id="skipBtnHolder" width="100%" height="100%">
-          <spacer height="100%"></spacer>
-          <hbox width="100%" height="30">
-            <spacer width="100%"></spacer>
-          </hbox>
-        </vbox>
-        <plugin id="gigya" width="100%" height="100%" loadingpolicy="noWait" title="{mediaProxy.entry.name}" shareemailbody="Hi,&lt;br&gt;I watched this video and thought you'd enjoy it too. &lt;br&gt;$URL$ to watch.&lt;br&gt; $sender$" shareemailsubject="Take a look at this video">
-      </plugin></canvas>
-      <canvas id="controlsHolder" width="100%" height="30">
-        <hbox id="ControllerScreenHolder" width="100%" height="30" verticalalign="middle" stylename="darkBg">
-          <hbox id="ControllerScreen" width="100%" height="30" horizontalgap="9" paddingleft="9" verticalalign="middle" stylename="darkBg">
-            <button id="playBtnControllerScreen" command="play" buttontype="iconButton" focusrectpadding="0" icon="playIcon" overicon="playIcon" downicon="playIcon" disabeledicon="playIcon" selectedupicon="pauseIcon" selectedovericon="pauseIcon" selecteddownicon="pauseIcon" selecteddisabledicon="pauseIcon" tooltip="Play" uptooltip="Play" selectedtooltip="Pause" k_buttontype="buttonIconControllerArea" color1="14540253" color2="16777215" color3="3355443" color4="10066329" color5="16777215" font="Arial"></button>
-            <button id="liveToggleStatus" toggle="true" color1="0xFF0000" color2="0xFF0000" upicon="onAirIcon" overicon="onAirIcon" downicon="onAirIcon" disabeledicon="onAirIcon" selectedupicon="offlineIcon" selectedovericon="offlineIcon" selecteddownicon="offlineIcon" selecteddisabledicon="offlineIcon" isselected="{mediaProxy.isOffline}" visible="{mediaProxy.isLive}" includeinlayout="{mediaProxy.isLive}" mouseenable="false" usehandcursor=""></button>
-            <vbox id="scrubberContainer" width="100%" height="30" verticalalign="middle" verticalgap="-3" notvisible="{mediaProxy.isLive}">
-              <spacer height="10"></spacer>
-              <scrubber id="scrubber" width="100%" height="10" stylename="" color1="14540253" color2="14540253"></scrubber>
-              <hbox width="100%">
-                <timer id="timerControllerScreen1" width="60" stylename="timerProgressLeft" format="mm:ss" height="12" dynamiccolor="true" timertype="forwards" color1="14540253"></timer>
-                <spacer width="100%" height="8"></spacer>
-                <timer id="timerControllerScreen2" width="60" stylename="timerProgressRight" format="mm:ss" height="12" timertype="total" dynamiccolor="true" color1="14540253"></timer>
-              </hbox>
-            </vbox>
-            <volumebar id="volumeBar" stylename="volumeBtn" buttonwidth="20" width="20" height="20" buttontype="iconButton" tooltip="Change volume" initialvalue="1" forceinitialvalue="false" color1="14540253" color2="16777215" color3="3355443" color4="10066329" color5="16777215" font="Arial"></volumebar>
-            <button id="shareBtnControllerScreen" buttontype="iconButton" kclick="sendNotification('doGigya')" height="22" stylename="controllerScreen" focusrectpadding="0" icon="shareIcon" tooltip="share with friends" k_buttontype="buttonIconControllerArea" uiconfid="" color1="14540253" color2="16777215" color3="3355443" color4="10066329" color5="16777215" font="Arial"></button>
-            <button id="fullScreenBtnControllerScreen" command="fullScreen" buttontype="iconButton" height="22" stylename="controllerScreen" icon="openFullScreenIcon" selectedupicon="closeFullScreenIcong" selectedovericon="closeFullScreenIcon" selecteddownicon="closeFullScreenIcon" selecteddisabledicon="closeFullScreenIcon" focusrectpadding="0" allowdisable="false" tooltip="Toggle fullscreen" k_buttontype="buttonIconControllerArea" uptooltip="Open Full Screen" selectedtooltip="Close Full Screen" color1="14540253" color2="16777215" color3="3355443" color4="10066329" color5="16777215" font="Arial"></button>
-          </hbox>
-          <spacer width="13"></spacer>
-          <button id="kalturaLogo" height="50" width="100" kclick="navigate('http://www.kaltura.com')" stylename="controllerScreen" icon="kalturaLogo"></button>
-          <spacer width="13"></spacer>
-        </hbox>
-      </canvas>
-    </vbox>
-  </hbox>
-  <screens>
-    <screen id="startScreen">
-      <vbox id="startContainer" width="100%" height="100%" verticalalign="middle" horizontalalign="center">
-        <spacer width="100%"></spacer>
-        <tile id="startTile" width="100%" verticalgap="10" verticalalign="middle" horizontalalign="center">
-          <button id="onVideoPlayBtnStartScreen" command="play" buttontype="onScreenButton" minwidth="60" labelplacement="top" label="Play" stylename="onScreenBtn" upicon="playIcon" overicon="playIcon" downicon="playIcon" disabeledicon="playIcon" selectedupicon="playIcon" selectedovericon="playIcon" selecteddownicon="playIcon" selecteddisabledicon="playIcon" k_buttontype="buttonIconControllerArea" tooltip="Play video" color1="14540253" color2="16777215" color3="3355443" color4="10066329" color5="16777215" font="Arial"></button>
-          <button id="shareBtnStartScreen" kclick="sendNotification('doGigya')" buttontype="onScreenButton" minwidth="60" labelplacement="top" label="Share" stylename="onScreenBtn" upicon="shareIcon" k_buttontype="buttonIconControllerArea" tooltip="share with friends" uiconfid="" color1="14540253" color2="16777215" color3="3355443" color4="10066329" color5="16777215" font="Arial"></button>
-        </tile>
-        <spacer width="100%"></spacer>
-      </vbox>
-    </screen>
-    <screen id="pauseScreen">
-      <vbox id="pauseContainer" width="100%" height="100%" verticalalign="middle" horizontalalign="center">
-        <spacer height="100%"></spacer>
-        <tile id="pauseTile" width="100%" verticalgap="10" verticalalign="middle" horizontalalign="center">
-          <button id="onVideoPlayBtnPauseScreen" command="play" buttontype="onScreenButton" minwidth="60" labelplacement="top" label="Play" stylename="onScreenBtn" upicon="playIcon" overicon="playIcon" downicon="playIcon" disabeledicon="playIcon" selectedupicon="playIcon" selectedovericon="playIcon" selecteddownicon="playIcon" selecteddisabledicon="playIcon" k_buttontype="buttonIconControllerArea" tooltip="Play video" color1="14540253" color2="16777215" color3="3355443" color4="10066329" color5="16777215" font="Arial"></button>
-          <button id="shareBtnPauseScreen" kclick="sendNotification('doGigya')" buttontype="onScreenButton" minwidth="60" labelplacement="top" label="Share" stylename="onScreenBtn" upicon="shareIcon" k_buttontype="buttonIconControllerArea" tooltip="share with friends" uiconfid="" color1="14540253" color2="16777215" color3="3355443" color4="10066329" color5="16777215" font="Arial"></button>
-        </tile>
-        <spacer height="100%"></spacer>
-      </vbox>
-    </screen>
-    <screen id="playScreen">
-      <vbox id="playContainer" width="100%" height="100%" verticalalign="middle" horizontalalign="center">
-        <spacer height="100%"></spacer>
-        <tile id="playTile" width="100%" verticalgap="10" verticalalign="middle" horizontalalign="center"></tile>
-        <spacer height="100%"></spacer>
-      </vbox>
-    </screen>
-    <screen id="endScreen">
-      <vbox id="endContainer" width="100%" height="100%" verticalalign="middle" horizontalalign="center">
-        <spacer height="100%"></spacer>
-        <tile id="endTile" width="100%" verticalgap="10" verticalalign="middle" horizontalalign="center">
-          <button id="replayBtnEndScreen" kclick="sendNotification('doPlay')" buttontype="onScreenButton" minwidth="60" labelplacement="top" label="Replay" stylename="onScreenBtn" upicon="replayIcon" k_buttontype="buttonIconControllerArea" uptooltip="Play" selectedtooltip="Pause" tooltip="Replay" color1="14540253" color2="16777215" color3="3355443" color4="10066329" color5="16777215" font="Arial"></button>
-          <button id="shareBtnEndScreen" kclick="sendNotification('doGigya')" buttontype="onScreenButton" minwidth="60" labelplacement="top" label="Share" stylename="onScreenBtn" upicon="shareIcon" k_buttontype="buttonIconControllerArea" tooltip="share with friends" uiconfid="" color1="14540253" color2="16777215" color3="3355443" color4="10066329" color5="16777215" font="Arial"></button>
-        </tile>
-        <spacer height="100%"></spacer>
-      </vbox>
-    </screen>
-  </screens>
-  <strings>
-    <string key="ENTRY_CONVERTING" value="Entry is processing, please try again in a few minutes."></string>
-  </strings>
-  <extradata>
-    <gigyaui theme="dark">
-      <config>
-        <display showemail="true" usetransitions="true" showbookmark="false" codeboxheight="auto" showcodebox="true" showclosebutton="true" networkswithcodebox="" networkstohide="livespaces, piczo, orkut, pageflakes, vox, tagged, hi5, multiply" networkstoshow="facebook, twitter, wordpress" bookmarkstoshow="googlebookmarks,delicious,digg,facebookshare,newsvine,reddit,twitter,ask,myaol,slashdot,skimbit,simpy,blogmarks,spurl,linkagogo,Magnolia,faves,segnalo,netvouz,blinklist,dropjack,feedmelinks"></display>
-        
-          <background frame-color="#BFBFBF" background-color="#292929" frame-thickness="0" gradient-color-begin="#292929" gradient-color-end="#292929" corner-roundness="0;0;0;0"></background>
-          <controls corner-roundness="4;4;4;4" gradient-color-begin="#EAEAEA" gradient-color-end="#F4F4F4" bold="false">
-            <snbuttons type="textUnder" frame-color="#666666" background-color="#292929" over-frame-color="#FFFFFF" color="#BFBFBF" gradient-color-begin="#666666" gradient-color-end="Transparent" size="10" bold="false" down-frame-color="#666666" down-gradient-color-begin="Transparent" over-gradient-color-end="#ffffff" down-gradient-color-end="#666666" over-color="#ffffff" down-color="#ffffff" over-bold="false">
-              <more frame-color="#A4DBFF" over-frame-color="#A4DBFF" gradient-color-begin="#F4F4F4" gradient-color-end="#BBE4FF" over-gradient-color-begin="#A4DBFF" over-gradient-color-end="#F4F4F4"></more>
-              <previous frame-color="#BBE4FF" over-frame-color="#A4DBFF" gradient-color-begin="#FFFFFF" gradient-color-end="#A4DBFF" over-gradient-color-begin="#A4DBFF" over-gradient-color-end="#F4F4F4"></previous>
-            </snbuttons>
-            <textboxes frame-color="#CACACA" background-color="#292929" color="#757575" gradient-color-begin="#292929" gradient-color-end="#292929" bold="false">
-              <codeboxes color="#808080" frame-color="#6A6A6A" background-color="#606060" gradient-color-begin="Transparent" gradient-color-end="Transparent" size="10"></codeboxes>
-              <inputs frame-color="#6a6a6a" color="#808080" gradient-color-begin="Transparent" gradient-color-end="Transparent">
-              <dropdowns list-item-over-color="#52A4DA" frame-color="#6a6a6a" background-color="#292929" color="#808080" gradient-color-begin="#292929" gradient-color-end="#292929"></dropdowns>
-            </inputs></textboxes>
-            <buttons frame-color="#6a6a6a" background-color="Transparent" gradient-color-begin="#666666" gradient-color-end="Transparent" color="#FFFFFF" frame-thickness="1" size="12" bold="false" over-frame-color="#FFFFFF" down-frame-color="#6a6a6a" over-gradient-color-begin="#666666" down-gradient-color-begin="Transparent" over-gradient-color-end="#353535" down-gradient-color-end="Transparent" over-size="12" over-bold="false">
-              <post-buttons frame-color="#6a6a6a" gradient-color-end="Transparent">
-            </post-buttons></buttons>
-            <listboxes frame-color="#CACACA" corner-roundness="4;4;4;4" gradient-color-begin="#F4F4F4" gradient-color-end="#FFFFFF"></listboxes>
-            <checkboxes checkmark-color="#FFFFC8" frame-color="#6a6a6a" down-gradient-color-begin="#292929" down-gradient-color-end="#292929" background-color="#292929" corner-roundness="3;3;3;3" gradient-color-begin="Transparent" gradient-color-end="Transparent" over-background-color="#292929" down-background-color="#292929"></checkboxes>
-            <servicemarker gradient-color-begin="Transparent" gradient-color-end="#666666"></servicemarker>
-            <tooltips frame-thickness="0" color="#292929" gradient-color-begin="#FFFFFF" gradient-color-end="#FFFFC8" size="10" frame-color="#FFDBA4"></tooltips>
-          </controls>
-          <texts color="808080">
-            <privacy color="#808080"></privacy>
-            <headers color="#FFFFFF" bold="false"></headers>
-            <labels color="#FFFFFF" bold="false"></labels>
-            <messages color="#202020" background-color="#FFFFA4" frame-thickness="0" corner-roundness="4;4;4;4"></messages>
-            <links color="#FFFFFF" underline="false" over-color="#666666" down-color="#666666" down-bold="false">
-          </links></texts>
-        
-      </config>
-    </gigyaui>
-  </extradata>
-  <plugins></plugins>
-  <uivars>
-    <var key="video.keepAspectRatio" value="true"></var>
-    <var key="playlistAPI.autoContinue" value="false"></var>
-    <var key="imageDefaultDuration" value="2"></var>
-    <var key="autoPlay" value="false"></var>
-    <var key="autoMute" value="false"></var>
-  </uivars>
-
+UI CONF GOES HERE!
  -->
 
 </body>
