--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -71,11 +71,11 @@ function readyCallbackFired( playerId ){
 <p><p>
 <!-- 
 <b> This script takes 1 second to load </b>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&id=0"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&id=1"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&id=2"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&id=3"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&id=4"></script>
+<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=0"></script>
+<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=1"></script>
+<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=2"></script>
+<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=3"></script>
+<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=4"></script>
  -->
 </body>
 </html>
