--- a/modules/KalturaSupport/tests/ImageEntryPlaylist.qunit.html
+++ b/modules/KalturaSupport/tests/ImageEntryPlaylist.qunit.html
@@ -42,24 +42,25 @@ function jsKalturaPlayerTest( videoId ){
 <h2> Image Entry Playlist test </h2>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
-<object id="kaltura_player_1327010446" name="kaltura_player_1327010446" 
+<object id="kaltura_player_1327276870" 
+	name="kaltura_player_1327276870" 
 	type="application/x-shockwave-flash" 
 	allowFullScreen="true" 
 	allowNetworking="all" 
 	allowScriptAccess="always" 
-	height="680" width="400" 
+	height="620" width="400" 
 	bgcolor="#000000" 
 	xmlns:dc="http://purl.org/dc/terms/" 
 	xmlns:media="http://search.yahoo.com/searchmonkey/media/" 
 	rel="media:video" 
-	resource="http://www.kaltura.com/index.php/kwidget/cache_st/1327010446/wid/_243342/uiconf_id/6817622" 
-	data="http://www.kaltura.com/index.php/kwidget/cache_st/1327010446/wid/_243342/uiconf_id/6817622">
+	resource="http://www.kaltura.com/index.php/kwidget/cache_st/1327276870/wid/_243342/uiconf_id/5783651" 
+	data="http://www.kaltura.com/index.php/kwidget/cache_st/1327276870/wid/_243342/uiconf_id/5783651">
 	<param name="allowFullScreen" value="true" />
 	<param name="allowNetworking" value="all" />
 	<param name="allowScriptAccess" value="always" />
 	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="playlistAPI.autoInsert=true&playlistAPI.kpl0Name=video and image&playlistAPI.kpl0Url=http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D243342%26subp_id%3D24334200%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D0_8srs925f&{FLAVOR}" />
-	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1327010446/wid/_243342/uiconf_id/6817622" />
+	<param name="flashVars" value="playlistAPI.autoInsert=true&playlistAPI.kpl0Name=video and image&playlistAPI.kpl0Url=http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D243342%26subp_id%3D24334200%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D0_8srs925f&" />
+	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1327276870/wid/_243342/uiconf_id/5783651" />
 </object>
 <br />
 </body>
