added a addJsListener binding to check race condition addJsListener unset issue
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3934 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -53,6 +53,9 @@ function readyCallbackFired( playerId ){
 	<span property="media:height" content="300"></span>
 </div>
 <script>
+	window['doPlayCallback'] = function( playerId ){
+		console.log( 'doPlayCallback ' + playerId );
+	};
 	kWidget.embed({
 		'targetId': 'myVideoTarget',
 		'wid': '_243342',
@@ -63,7 +66,9 @@ function readyCallbackFired( playerId ){
 			'autoPlay' : true
 		},
 		'readyCallback': function( playerId ){
-			console.warn( "kWidget player ready: " + playerId );
+			console.log( "kWidget player ready: " + playerId );
+			var kdp = $('#' + playerId ).get(0);
+			kdp.addJsListener( 'doPlay', 'doPlayCallback')
 			readyCallbackFired( playerId );
 		}
 	})
