don't autoplay on the webkit plays inline test ( iPhone  test )
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3942 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/NativeWebKitPlaysInline.html
+++ b/modules/KalturaSupport/tests/NativeWebKitPlaysInline.html
@@ -71,8 +71,7 @@ You can test by using desktop safari with an iPhone user agent and check for inl
 		'uiconf_id' : '2877502',
 		'entry_id' : '0_uka1msg4',
 		'flashvars':{
-			'externalInterfaceDisabled' : false,
-			'autoPlay' : true
+			'externalInterfaceDisabled' : false
 		},
 		'readyCallback': function( playerId ){
 			console.log( "kWidget player ready: " + playerId );
