moved supportsHTML5 to kWidgetLoader
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3955 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -54,7 +54,7 @@ function readyCallbackFired( playerId ){
 </div>
 <script>
 	window['doPlayCallback'] = function( playerId ){
-		console.log( 'doPlayCallback ' + playerId );
+		console.log( 'kwidget doPlayCallback ' + playerId );
 	};
 	kWidget.embed({
 		'targetId': 'myVideoTarget',
@@ -68,7 +68,8 @@ function readyCallbackFired( playerId ){
 		'readyCallback': function( playerId ){
 			console.log( "kWidget player ready: " + playerId );
 			var kdp = $('#' + playerId ).get(0);
-			kdp.addJsListener( 'doPlay', 'doPlayCallback')
+			kdp.addJsListener( 'doPlay', 'doPlayCallback');
+			alert( 'wtf');
 			readyCallbackFired( playerId );
 		}
 	})
