--- a/modules/KalturaSupport/tests/captureThumbnail.html
+++ b/modules/KalturaSupport/tests/captureThumbnail.html
@@ -4,7 +4,7 @@
     <title>Capture Thumbnail HTML5</title>
 
     <!-- Twitter Bootstrap -->
-    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css" />
 
     <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
@@ -32,7 +32,7 @@
 
             $( '#getPlayer' ).click(function() {
                 // TODO: support switch between flash<->html5 - currently not stable
-                if($( '#forceHTML' ).attr( 'checked' ) ) {
+                if($( '#forceHTML:checked' ).length ) {
                     mw.setConfig( 'forceMobileHTML5', true );
                 }
                 else {
