removed partner details
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3996 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/captureThumbnail.html
+++ b/modules/KalturaSupport/tests/captureThumbnail.html
@@ -73,19 +73,19 @@
     <div class="clearfix">
         <label for="partnerId">Partner ID</label>
         <div class="input">
-            <input type="text" id="partnerId" value="861182" />
+            <input type="text" id="partnerId" value="" />
         </div>
     </div>
     <div class="clearfix">
         <label for="adminSecret">Admin Secret</label>
         <div class="input">
-            <input type="text" id="adminSecret" value="fbf00a5ede5018a46aa4e5bb3b2f1b85" />
+            <input type="text" id="adminSecret" value="" />
         </div>
     </div>
     <div class="clearfix">
         <label for="entryId">Entry ID</label>
         <div class="input">
-            <input type="text" id="entryId" value="1_8ions2uv" />
+            <input type="text" id="entryId" value="" />
         </div>
     </div>
     <div class="clearfix">
