--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -54,7 +54,8 @@ function readyCallbackFired( playerId ){
 </div>
 <script>
 	window['doPlayCallback'] = function( playerId ){
-		console.log( 'kwidget doPlayCallback ' + playerId );
+		console.log( 'kWidget doPlayCallback ' + playerId );
+		//$('body').append( '<div>started playback</div>' );
 	};
 	kWidget.embed({
 		'targetId': 'myVideoTarget',
@@ -74,13 +75,16 @@ function readyCallbackFired( playerId ){
 	});
 </script>
 <p><p>
-
-<b> This script takes 1 second to load </b>
+<!-- 
+<b> Slow loading document.write scripts </b>
 <script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=0"></script>
 <script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=1"></script>
 <script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=2"></script>
 <script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=3"></script>
 <script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=4"></script>
-
+<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=5"></script>
+<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=6"></script>
+ -->
+ 
 </body>
 </html>
