* refactored DolStatistics for consistencies * added an event to trigger the volume change on toggle mute * fallback to fv = $( embedPlayer ).data('flashvars'); * minor timed text updates
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@4030 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/kWidget.embed.qunit.html
+++ b/modules/KalturaSupport/tests/kWidget.embed.qunit.html
@@ -64,7 +64,8 @@ function readyCallbackFired( playerId ){
 		'entry_id' : '0_uka1msg4',
 		'flashvars':{
 			'externalInterfaceDisabled' : false,
-			'autoPlay' : true
+			'autoPlay' : true,
+			'fooBar': 'cats'
 		},
 		'readyCallback': function( playerId ){
 			console.log( "kWidget player ready: " + playerId );
