--- a/modules/KalturaSupport/tests/OverlayFlashAndHTML.html
+++ b/modules/KalturaSupport/tests/OverlayFlashAndHTML.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Captions Under Player</title>
+<title>Overlaying Flash & HTML</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">
