--- a/modules/DolStatistics/tests/DOLStatisticsPlaylist.html
+++ b/modules/DolStatistics/tests/DOLStatisticsPlaylist.html
@@ -19,27 +19,19 @@
  </script>
   <body>
   	<h3> Test DOL statistic plugin</h3>
-  
-    <object id="kaltura_player_1328708786"
-    	name="kaltura_player_1328708786" 
-    	type="application/x-shockwave-flash" 
-    	allowFullScreen="true" 
-    	allowNetworking="all" 
-    	allowScriptAccess="always" 
-    	height="620" width="400"
-    	bgcolor="#000000" 
-    	xmlns:dc="http://purl.org/dc/terms/" 
-    	xmlns:media="http://search.yahoo.com/searchmonkey/media/" 
-    	rel="media:video" 
-    	resource="http://www.kaltura.com/index.php/kwidget/cache_st/1328708786/wid/_243342/uiconf_id/7190901" 
-    	data="http://www.kaltura.com/index.php/kwidget/cache_st/1328708786/wid/_243342/uiconf_id/7190901">
-    		<param name="allowFullScreen" value="true" />
-    		<param name="allowNetworking" value="all" />
-    		<param name="allowScriptAccess" value="always" />
-    		<param name="bgcolor" value="#000000" />
-    		<param name="flashVars" value="playlistAPI.autoInsert=true&playlistAPI.kpl0Name=test 4 item playlist&playlistAPI.kpl0Url=http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D243342%26subp_id%3D24334200%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D0_q79jh71b&" />
-    		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1328708786/wid/_243342/uiconf_id/7190901" />
-	</object>
+  	<div id="kaltura_player_1328708786" style="height:620px;width:400px"></div>
+  	<script>
+  		kWidget.embed({
+  			targetId: 'kaltura_player_1328708786',
+  			wid : '_243342',
+  			uiconf_id : '7190901',
+  			flashvars: {
+  				'playlistAPI.autoInsert' : 'true',
+  				'playlistAPI.kpl0Name' : 'test 4 item playlist',
+  				'playlistAPI.kpl0Url' : 'http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D243342%26subp_id%3D24334200%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D0_q79jh71b'
+  			}
+  		})
+  	</script>
 	
  <textarea id="feedbackXml" name="feedbackXml" col="5" rows="10" style="width:500px; height:400px; position:absolute;top:0px;right:0px;" ></textarea>
   </body>
