--- a/modules/DolStatistics/tests/DOLStatisticsPlaylist.html
+++ b/modules/DolStatistics/tests/DOLStatisticsPlaylist.html
@@ -25,6 +25,7 @@
   			targetId: 'kaltura_player_1328708786',
   			wid : '_243342',
   			uiconf_id : '7190901',
+  			cache_st : 1,
   			flashvars: {
   				'playlistAPI.autoInsert' : 'true',
   				'playlistAPI.kpl0Name' : 'test 4 item playlist',
@@ -33,7 +34,7 @@
   		})
   	</script>
 	
- <textarea id="feedbackXml" name="feedbackXml" col="5" rows="10" style="width:500px; height:400px; position:absolute;top:0px;right:0px;" ></textarea>
+ <textarea id="feedbackXml" name="feedbackXml" col="5" rows="10" style="width:500px; height:700px; position:absolute;top:0px;right:0px;" ></textarea>
   </body>
   <!--  
   
@@ -59,7 +60,7 @@ customDataKey1="customDataKey"
 customDataValue1="{mediaProxy.entryMetadata.DOL2}"
 customDataKey2="entryId"
 customDataValue2="{mediaProxy.entry.id}"
-listenTo="playerPaused,doGigya,mute,unmute,adStart,doubleclick,freePreviewEnd,closeFullScreen,postSequenceComplete,preSequenceComplete,prerollStarted,midrollStarted,postrollStarted,changeMedia,playerSeekEnd,playerSeekStart,playerUpdatePlayhead,mediaError,entryNotAvailable,entryFailed,aa,openFullScreen,mediaReady,percentReached,bb,mediaLoadError,playerPlayEnd,adEnd" />
+listenTo="playerPaused,doGigya,mute,unmute,adStart,doubleclick,freePreviewEnd,closeFullScreen,postSequenceComplete,preSequenceComplete,prerollStarted,midrollStarted,postrollStarted,changeMedia,playerSeekEnd,playerSeekStart,playerUpdatePlayhead,mediaError,entryNotAvailable,entryFailed,aa,openFullScreen,mediaReady,percentReached,bb,mediaLoadError,playerPlayEnd,adEnd,volumeChanged" />
 
       
       <Canvas height="100%" width="100%" id="PlayerHolder" styleName="black">
