--- a/modules/DolStatistics/tests/DOLStatisticsPlaylist.html
+++ b/modules/DolStatistics/tests/DOLStatisticsPlaylist.html
@@ -27,6 +27,7 @@
   			uiconf_id : '7190901',
   			cache_st : 1,
   			flashvars: {
+  				'autoPlay' : true,
   				'playlistAPI.autoInsert' : 'true',
   				'playlistAPI.kpl0Name' : 'test 4 item playlist',
   				'playlistAPI.kpl0Url' : 'http%3A%2F%2Fwww.kaltura.com%2Findex.php%2Fpartnerservices2%2Fexecuteplaylist%3Fuid%3D%26partner_id%3D243342%26subp_id%3D24334200%26format%3D8%26ks%3D%7Bks%7D%26playlist_id%3D0_q79jh71b'
