fixed replayEvent binding don't start monitoring until playerReady
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@4162 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/DolStatistics/tests/DOLStatisticsPlayer.html
+++ b/modules/DolStatistics/tests/DOLStatisticsPlayer.html
@@ -33,7 +33,7 @@ var cto = {
 	<param name="allowNetworking" value="all" />
 	<param name="allowScriptAccess" value="always" />
 	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="&externalInterfaceDisabled=false" />
+	<param name="flashVars" value="&externalInterfaceDisabled=false&autoPlay=true" />
 	<param name="movie" value="http://www.kaltura.co.cc/index.php/kwidget/cache_st/1323101371/wid/_1421/uiconf_id/1785641/entry_id/0_8adsa2hl" />
 </object>
 <textarea id="feedbackXml" name="feedbackXml" col="5" rows="10" style="width:500px; height:700px; position:absolute;top:0px;right:0px;" ></textarea>
