added pause / show for hide show
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@4190 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/PageWithVerticalScrollHideShow.html
+++ b/modules/KalturaSupport/tests/PageWithVerticalScrollHideShow.html
@@ -48,9 +48,11 @@ $( document ).ready(function(){
 	var hidden = false;
 	$("#testHide").click( function(){
 		if( !hidden){
+			$('#kaltura_player').get(0).sendNotification( 'doPause' );
 			$('#playerHolder').css('left', '-2048px' );
 			hidden = true;
 		} else {
+			$('#kaltura_player').get(0).sendNotification( 'doPlay' );
 			$('#playerHolder').css('left', '20%' );
 			hidden = false;
 		}
