--- a/modules/KalturaSupport/standAloneTests/kWidget.getSources.html
+++ b/modules/KalturaSupport/standAloneTests/kWidget.getSources.html
@@ -3,24 +3,32 @@
 </head>
 <body>
 	<h3>Sample kWidget.getSources</h3>
-	partnerId : '243342', entryId: '0_c0r624gh'
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	partnerId : <input id="partnerId" type="text" value="243342" size="8"> entryId: <input id="entryId" type="text" value="0_c0r624gh" size="10"><br/>
+	<input id="getSources" type="button" value="get sources"/>
 	<div id="sourceSet"></div>
+	
+	<!--  Stand alone script for getting sources -->
 	<script src="kWidget.getSources.js"></script>
+	
 	<script>
-		kWidget.getSources({
-			'partnerId': '243342',
-			'entryId': '0_c0r624gh',
-			'callback': function( sourceSet ){
-				var o = '';
-				for( var i in sourceSet ){
-					var source = sourceSet[i];
-					o += ' <br/>' + ' Source <a href="' + source['src'] + '" >' + source['data-flavorid'] + '</a>, ';
-					o += ( source['data-bitrate'] )? ' bitrate:' + source['data-bitrate'] + ' size: ' + source['data-width'] + 'x' + source['data-height'] : ' ( adaptive ) ';
-					o += '<br />';
-				}
-				document.getElementById( 'sourceSet' ).innerHTML = o;
-			}
-		})
+			$('#getSources').click(function(){
+				$('#sourceSet').html('loading <blink>...</blink>');
+				kWidget.getSources({
+					'partnerId': $('#partnerId').val(),
+					'entryId': $('#entryId').val(),
+					'callback': function( sourceSet ){
+						var o = '';
+						for( var i in sourceSet ){
+							var source = sourceSet[i];
+							o += ' <br/>' + ' Source <a href="' + source['src'] + '" >' + source['data-flavorid'] + '</a>, ';
+							o += ( source['data-bitrate'] )? ' bitrate:' + source['data-bitrate'] + ' size: ' + source['data-width'] + 'x' + source['data-height'] : ' ( adaptive ) ';
+							o += '<br />';
+						}
+						$('#sourceSet').html( o );
+					}
+				})
+		});
 	</script>
 </body>
 </html>
