--- a/modules/DoubleClick/tests/DoubleClickManagedPlayer.html
+++ b/modules/DoubleClick/tests/DoubleClickManagedPlayer.html
@@ -40,14 +40,14 @@ all ad slots and overlays are loaded from server.
 	xmlns:dc="http://purl.org/dc/terms/" 
 	xmlns:media="http://search.yahoo.com/searchmonkey/media/" 
 	rel="media:video" 
-	resource="http://www.kaltura.com/index.php/kwidget/cache_st/1231231243/wid/_243342/uiconf_id/5774681/entry_id/0_uka1msg4" 
-	data="http://www.kaltura.com/index.php/kwidget/cache_st/1231231243/wid/_243342/uiconf_id/5774681/entry_id/0_uka1msg4">
+	resource="http://www.kaltura.com/index.php/kwidget/cache_st/1231231244/wid/_243342/uiconf_id/7340952/entry_id/0_uka1msg4" 
+	data="http://www.kaltura.com/index.php/kwidget/cache_st/1231231244/wid/_243342/uiconf_id/7340952/entry_id/0_uka1msg4">
 		<param name="allowFullScreen" value="true" />
 		<param name="allowNetworking" value="all" />
 		<param name="allowScriptAccess" value="always" />
 		<param name="bgcolor" value="#000000" />
 		<param name="flashVars" value="&" />
-		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1231231243/wid/_243342/uiconf_id/5774681/entry_id/0_uka1msg4" />
+		<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1231231244/wid/_243342/uiconf_id/7340952/entry_id/0_uka1msg4" />
 </object>
 
 <!-- 
@@ -67,7 +67,7 @@ all ad slots and overlays are loaded from server.
 			width="100%"  	
 			trackCuePoints="true" 
 			cmsId="244"  
-			adTagUrl="http://pubads.g.doubleclick.net/gampad/ads?sz=768x432&iu=%2F7046%2Fdch&ciu_szs=180x150&impl=s&gdfp_req=1&env=vp&output=xml_vast2&unviewed_position_start=1&url=[referrer_url]&correlator=[timestamp]&ad_rule=1&" 	
+			adTagUrl="http://pubads.g.doubleclick.net/gampad/ads?sz=768x432%26iu=%2F7046%2Fdch%26ciu_szs=180x150%26impl=s%26gdfp_req=1%26env=vp%26output=xml_vast2%26unviewed_position_start=1%26url=[referrer_url]%26correlator=[timestamp]%26ad_rule=1%26" 	
 			adType= "" 
 			channels=""  
 			contentId= "0_kxoy0aqi"  
