--- a/modules/DoubleClick/tests/DoubleClickManagedPlayer.html
+++ b/modules/DoubleClick/tests/DoubleClickManagedPlayer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title> DoubleClick Managed Player </title>
+<title> DoubleClick Managed Player ( PreRoll, Midroll, and PostRoll )  </title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">	
